--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: interstellar
 channels:
   - defaults
   - anaconda
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=4.5=1_gnu
