--- a/.github/workflows/python_linting.yml
+++ b/.github/workflows/python_linting.yml
@@ -12,7 +12,18 @@ jobs:
     - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.9
+    - name: Install Anaconda environment
+      run: |
+        wget https://repo.anaconda.com/archive/Anaconda3-2019.07-Linux-x86_64.sh
+        bash Anaconda3-2019.07-Linux-x86_64.sh -b
+        rm Anaconda3-2019.07-Linux-x86_64.sh
+        export PATH="/home/runner/anaconda3/bin:$PATH"
+        conda update conda
+        conda update anaconda
+        conda update --all
+        conda env create --file=environment.yml
+        conda init bash
     - name: Lint with pylint
       run: |
         PYLINT_VER=$(grep pylint environment.yml | cut -d = -f2)
