--- a/.github/workflows/python_linting.yml
+++ b/.github/workflows/python_linting.yml
@@ -22,7 +22,7 @@ jobs:
         conda update conda
         conda update anaconda
         conda update --all
-        conda env create --file=environment.yml
+        CONDA_RESTORE_FREE_CHANNEL=1 conda env create --file=environment.yml
         conda init bash
     - name: Lint with pylint
       run: |
